--- a/forgerock-authn-filter/forgerock-jaspi-modules/forgerock-jaspi-iwa-module/pom.xml
+++ b/forgerock-authn-filter/forgerock-jaspi-modules/forgerock-jaspi-iwa-module/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.forgerock.commons</groupId>
+        <groupId>org.forgerock.ce.commons</groupId>
         <artifactId>forgerock-jaspi-modules</artifactId>
         <version>1.2.2</version>
     </parent>
