--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.forgerock</groupId>
+        <groupId>org.forgerock.ce</groupId>
         <artifactId>forgerock-parent</artifactId>
         <version>1.1.0</version>
     </parent>
 
-    <groupId>org.forgerock.commons</groupId>
+    <groupId>org.forgerock.ce.commons</groupId>
     <artifactId>forgerock-auth-filters</artifactId>
     <version>1.2.2</version>
     <packaging>pom</packaging>
@@ -101,27 +101,27 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.forgerock.commons</groupId>
+                <groupId>org.forgerock.ce.commons</groupId>
                 <artifactId>forgerock-auth-filter-common</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.commons</groupId>
+                <groupId>org.forgerock.ce.commons</groupId>
                 <artifactId>forgerock-jaspi-container</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.commons</groupId>
+                <groupId>org.forgerock.ce.commons</groupId>
                 <artifactId>json-resource</artifactId>
                 <version>${forgerock-rest.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.commons</groupId>
+                <groupId>org.forgerock.ce.commons</groupId>
                 <artifactId>json-web-token</artifactId>
                 <version>${forgerock-rest.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.commons</groupId>
+                <groupId>org.forgerock.ce.commons</groupId>
                 <artifactId>json-resource</artifactId>
                 <version>${forgerock-rest.version}</version>
             </dependency>
