--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,9 @@
 
     <repositories>
         <repository>
-            <id>forgerock-staging-repository</id>
+            <id>forgerock-community-repository</id>
             <name>ForgeRock Release Repository</name>
-            <url>http://maven.forgerock.org/repo/releases</url>
+            <url>http://maven.forgerock.org/repo/community</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
